# converter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: python-package.yml
pdf2epub/: README.md  cleaner.py  epub_builder.py  extractor.py  main.py  requirements.txt
tests/: test_cleaner.py  test_epub_builder.py  test_main.py
